--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@heroicons/react": "^2.0.11",
     "axios": "^0.27.2",
     "react": "^18.2.0",
-    "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "sassy-datepicker": "^0.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
