--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sassy-datepicker": "^0.10.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
